--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: default;
+}
+
+html,
+body,
+#__react-app {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: Roboto, sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-variation-settings: 'slnt' 0;
